refactor(synapse): consolidate mcp and cli into spectorctl, decommission runtime dist and client (#658)
* refactor(synapse): consolidate mcp and cli into spectorctl, decommission runtime dist and client

Consolidate MCP server and CLI commands into spector-cli (spectorctl) and decommission redundant pass-through modules spector-runtime, spector-dist, and spector-client:

- spector-cli: add McpCommand (spectorctl mcp) to run STDIO MCP server, add internal lightweight SpectorHttpClient for remote Synapse endpoints, use IngestionPipeline directly for local batch ingestion, package single fat JAR target/spector.jar
- spector-mcp: decouple from spector-runtime, bind handlers directly to SpectorMemory
- spector-spring: decouple from spector-client, back SpectorVectorStore directly with embedded SpectorMemory
- spector-synapse: update MCP tool handlers to McpToolHandler.execute(Map<String, Object>) contract
- Decommission spector-runtime, spector-dist, and spector-client modules and remove from reactor and BOM
- Update MkDocs documentation, architecture guides, quickstart, and developer scripts to reflect single spector.jar CLI distribution

Closes #657

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

* fix(synapse): remove null argument from McpToolHandler.execute callers (#657)

- Update ConversationReflector and McpServerConfig to invoke McpToolHandler.execute(args) without the decommissioned SpectorRuntime parameter
- Update architecture diagrams and documentation in overview.md, java-client.md, mcp-server.md, ingestion-pipeline.md, and spectorctl.md to reflect direct SpectorMemory and IngestionPipeline usage
- Update comments in McpRequestMemory and batch scripts

Refs #657, #658

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

---------

Co-authored-by: Forge <forgespectrayan@users.noreply.github.com>
Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>