@@ -1,22 +1,39 @@
 # spector-cli 🖥️
 
-> **Command-line interface (`spectorctl`) for Spector — with both remote and local batch modes.**
+> **Multi-function Command-line interface (`spectorctl`) and standalone MCP server runner for Spector.**
 
-`spector-cli` implements **`spectorctl`**, a unified CLI that supports:
-- **Remote mode** — manage a running Spector server via REST API (search, ingest single docs, status)
-- **Local batch mode** — discover and ingest files directly via `SpectorRuntime` (no server needed)
+`spector-cli` implements **`spectorctl`**, a unified CLI packaged as the standalone runnable `spector.jar` that supports:
+- **MCP server** — run the Model Context Protocol server over STDIO (`spectorctl mcp`)
+- **Local batch mode** — discover and ingest files directly into `SpectorMemory` (`spectorctl ingest --root`)
+- **Remote mode** — manage a running Spector server via REST API (search, status, memory inspect/recall)
 
 ---
 
 ## 🚀 Quick Start
 
 ```bash
-# Build from source
-mvn clean package -pl spector-dist -am -DskipTests
+# Build standalone JAR from source
+mvn clean package -pl synapse/spector-cli -am -DskipTests
 
-# Run via fat JAR
-java --add-modules jdk.incubator.vector -cp spector-dist/target/spector.jar \
-    com.spectrayan.spector.cli.SpectorCtl [command] [options]
+# Run MCP server (default STDIO transport for AI agents)
+java --enable-preview --add-modules jdk.incubator.vector \
+    -jar synapse/spector-cli/target/spector.jar mcp --config spector-local.yml
+
+# Run CLI commands
+java --enable-preview --add-modules jdk.incubator.vector \
+    -jar synapse/spector-cli/target/spector.jar [command] [options]
+```
+
+---
+
+## 🤖 MCP Server
+
+```bash
+# Start MCP server with configuration file
+spectorctl mcp --config spector.yml
+
+# Start MCP server with custom data directory and dimensions
+spectorctl mcp --dims 4096 --data-dir ~/.spector/data --ollama-model qwen3-embedding:latest
 ```
 
 ---
@@ -25,9 +42,9 @@ java --add-modules jdk.incubator.vector -cp spector-dist/target/spector.jar \
 
 The `ingest` command auto-detects mode from the flags provided:
 
-### Local Batch Mode (via Runtime)
+### Local Batch Mode (Direct Memory Ingestion)
 
-Discovers and ingests files directly — no server needed. Honors `spector.yml` config.
+Discovers and ingests files directly into `SpectorMemory` — no server needed. Honors `spector.yml` config.
 
 ```bash
 # Ingest from config (root-directory from spector.yml)
@@ -54,14 +71,29 @@ spectorctl ingest --file README.md --title "Project README"
 
 ---
 
+## 🧠 Cognitive Memory CLI
+
+```bash
+# Store a memory
+spectorctl memory remember --text "Spector uses 4-tier cognitive memory" --tier SEMANTIC
+
+# Recall memories
+spectorctl memory recall "cognitive memory" --top-k 5
+
+# View memory status
+spectorctl memory status
+```
+
+---
+
 ## 🔍 Search
 
 ```bash
 # Search with default settings
-spectorctl search --text "vector databases" --topK 5
+spectorctl search "vector databases" --top-k 5
 
 # Output as JSON (machine-parseable)
-spectorctl search --text "HNSW algorithm" --json
+spectorctl search "HNSW algorithm" --json
 ```
 
 ---
@@ -85,15 +117,3 @@ spectorctl status --json
 | `--host` | localhost | Spector server hostname (remote mode) |
 | `--port` | 7070 | Spector server port (remote mode) |
 | `--json` | false | Output in JSON format |
-
----
-
-## 🏗️ Architecture
-
-```
-spectorctl ingest --root /docs    → SpectorRuntime → IngestionHandler → engine/memory
-spectorctl ingest --content "..."  → SpectorClient → HTTP → SpectorNode
-spectorctl search --text "..."     → SpectorClient → HTTP → SpectorNode
-```
-
-The CLI depends on both `spector-runtime` (local operations) and `spector-client` (remote operations). Mode is auto-detected from the flags provided.
